Generate forward headers.
Install them in the proper directory.
Let cmake find them.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,8 @@ add_library(KF5Plotting ${kplotting_SRCS})
 generate_export_header(KF5Plotting BASE_NAME KPlotting)
 add_library(KF5::Plotting ALIAS KF5Plotting)
 
+target_include_directories(KF5Plotting INTERFACE "$<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}/kplotting>" "$<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}/KPlotting>")
+
 target_link_libraries(KF5Plotting PUBLIC Qt5::Widgets)
 
 set_target_properties(KF5Plotting PROPERTIES VERSION   ${KPLOTTING_VERSION_STRING}
@@ -18,14 +20,22 @@ set_target_properties(KF5Plotting PROPERTIES VERSION   ${KPLOTTING_VERSION_STRIN
                                              EXPORT_NAME Plotting
 )
 
+ecm_generate_headers(
+  KPlotAxis
+  KPlotPoint
+  KPlotObject
+  KPlotWidget
+
+  MODULE_NAME KPlotting
+  REQUIRED_HEADERS KPlotting_HEADERS
+)
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/KPlotting DESTINATION ${INCLUDE_INSTALL_DIR} COMPONENT Devel)
+
 install(TARGETS KF5Plotting EXPORT KF5PlottingTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
 
-install( FILES
-  kplotaxis.h
-  kplotpoint.h
-  kplotobject.h
-  kplotwidget.h
+install(FILES
   ${CMAKE_CURRENT_BINARY_DIR}/kplotting_export.h
-  DESTINATION ${INCLUDE_INSTALL_DIR} COMPONENT Devel
+  ${KPlotting_HEADERS}
+  DESTINATION ${INCLUDE_INSTALL_DIR}/kplotting COMPONENT Devel
 )
 
