Generate and install .pri file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,3 +39,7 @@ install(FILES
   DESTINATION ${INCLUDE_INSTALL_DIR}/KPlotting COMPONENT Devel
 )
 
+
+include(ECMGeneratePriFile)
+ecm_generate_pri_file(BASE_NAME KPlotting LIB_NAME KF5Plotting DEPS "widgets" FILENAME_VAR PRI_FILENAME)
+install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
