Use ecm_configure_package_config_file
Ported with:
sed -i -e 's/\(include(\)CMake\(PackageConfigHelpers)\)/\1ECM\2/' \
       -e 's/\<\(configure_package_config_file\)/ecm_\1/' \
       CMakeLists.txt

See http://commits.kde.org/extra-cmake-modules/139f60d81653888f696ef433

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(Qt5Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 
 include(FeatureSummary)
 include(GenerateExportHeader)
-include(CMakePackageConfigHelpers)
+include(ECMPackageConfigHelpers)
 include(ECMSetupVersion)
 include(ECMGenerateHeaders)
 
@@ -33,7 +33,7 @@ add_subdirectory(autotests)
 # create a Config.cmake and a ConfigVersion.cmake file and install them
 set(CMAKECONFIG_INSTALL_DIR "${CMAKECONFIG_INSTALL_PREFIX}/KF5Plotting")
 
-configure_package_config_file("${CMAKE_CURRENT_SOURCE_DIR}/KF5PlottingConfig.cmake.in"
+ecm_configure_package_config_file("${CMAKE_CURRENT_SOURCE_DIR}/KF5PlottingConfig.cmake.in"
                               "${CMAKE_CURRENT_BINARY_DIR}/KF5PlottingConfig.cmake"
                               INSTALL_DESTINATION  ${CMAKECONFIG_INSTALL_DIR}
                               )
