--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -1,1 +1,9 @@
+maintainer: cfeck
+description: Lightweight plotting framework
 tier: 1
+type: functional
+platforms:
+    - name: All
+portingAid: false
+deprecated: false
+release: true
