--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -7,3 +7,7 @@ platforms:
 portingAid: false
 deprecated: false
 release: true
+libraries:
+ - qmake: KPlotting
+   cmake: "KF5::Plotting"
+cmakename: KF5Plotting
