--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-find_package(Qt5 5.2.0 CONFIG REQUIRED Test Widgets)
+find_package(Qt5 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test Widgets)
 
 include(ECMAddTests)
 
