--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -11,3 +11,7 @@ libraries:
  - qmake: KPlotting
    cmake: "KF5::Plotting"
 cmakename: KF5Plotting
+
+public_lib: true
+group: Frameworks
+subgroup: Tier 1
