--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -3,7 +3,9 @@ description: Lightweight plotting framework
 tier: 1
 type: functional
 platforms:
-    - name: All
+    - name: Linux
+    - name: Windows
+    - name: MacOSX
 portingAid: false
 deprecated: false
 release: true
