--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 
-set(kplottest_SRCS testplot_widget.cpp testplot_main.cpp)
-add_executable(kplottest ${kplottest_SRCS})
+add_executable(kplottest)
+target_sources(kplottest PRIVATE testplot_widget.cpp testplot_main.cpp)
 
 target_link_libraries(kplottest KF5::Plotting Qt5::Widgets)
