--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -12,8 +12,7 @@ portingAid: false
 deprecated: false
 release: true
 libraries:
- - qmake: KPlotting
-   cmake: "KF6::Plotting"
+ - cmake: "KF6::Plotting"
 cmakename: KF6Plotting
 
 public_lib: true
